fix - overflow problem

--- a/frontend/components/Home.module.scss
+++ b/frontend/components/Home.module.scss
@@ -6,7 +6,7 @@
         grid-template-areas: "map stats"
                              "details cities";
         grid-column-gap: 4em;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: 50% 43%;
     }
     @media (max-width: 576px) {
         grid-template-areas: "map"
@@ -19,9 +19,6 @@
 
 .map {
     grid-area: map;
-    @media (min-width: 961px) {
-        //min-width: 600px;
-    }
     padding: 1em;
 }
 
